--- a/project/slider.css
+++ b/project/slider.css
@@ -1,8 +1,6 @@
-
-
-* {
-  margin: 0;
+*{
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
   font-family: 'Rubik', sans-serif;
   list-style: none;
@@ -16,6 +14,10 @@
 
   --big-font: 7rem;
   --p-font: 1.1rem;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 body{
@@ -144,4 +146,61 @@ body {
   border-radius: 8px;
   transition: all 0.6s ease-in-out;
   margin-bottom: 8px;
+}
+
+@media (max-width: 1850px){
+  header{
+      padding: 15px 8%;
+      transition: .2s;
+  }
+  section{
+      padding: 0 8%;
+      transition: .2s;
+  }
+}
+
+@media (max-width: 1370px){
+  header{
+      padding: 15px 4%;
+      transition: .2s;
+  }
+  section{
+      padding: 0 4%;
+      transition: .2s;
+  }
+  :root{
+      --big-font: 5.5rem;
+      --p-font: 1rem;
+      transition: .2s;
+  }
+}
+
+@media (max-width: 1020px){
+  .navbar a{
+      margin: 0 15px;
+  }
+  :root{
+      --big-font: 5rem;
+      --p-font: 1rem;
+      transition: .2s;
+  }
+}
+
+@media (max-width: 950px){
+
+}
+
+@media (max-width: 850px){
+  
+}
+
+@media (max-width: 500px){
+  :root{
+      --big-font: 4rem;
+      --p-font: 15px;
+      transition: .2s;
+  }
+  .btn{
+      padding: 9px 28px;
+  }
 }
